Begin work on the tokenizer!
- Tokenize special character tokens
- Use nested macros for enum definition
- Switch to C++14
- Add simple, hard-coded driver program
- Add ANSI color & decoration codes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(CopperVM VERSION 0.1
 				DESCRIPTION "A bytecode virtual machine for a sensible subset of JavaScript."
 				LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_BUILD_TYPE Debug)
 
 set(LIB_SRC
@@ -14,5 +14,5 @@ add_library(libcopper ${LIB_SRC})
 target_include_directories(libcopper PUBLIC include)
 set_target_properties(libcopper PROPERTIES PREFIX "")
 
-add_executable(copper app/copper.cpp)
+add_executable(copper app/Copper.cpp)
 target_link_libraries(copper PUBLIC libcopper)
