VM: Implement bytecode interpretation for arithmetic expression
- Also add a simple test file for arithmetic expressions
- Make Copper.cpp use the new pipeline
- Failed parse does not trigger the VM
- Get rid of the lexer output and its flag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set(LIB_SRC
 	src/Bytecode.cpp
 	src/Parser.cpp
 	src/Tokenizer.cpp
+	src/VM.cpp
 )
 
 # libcurt: Library for the Copper (Cu) Runtime
