--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_BUILD_TYPE Debug)
 
 set(LIB_SRC
 	src/Bytecode.cpp
+	src/Disassembler.cpp
 	src/Parser.cpp
 	src/Tokenizer.cpp
 	src/TranslationUnit.cpp
