CMake: Add build detail macros

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,6 @@ cmake_minimum_required(VERSION 3.10.2)
 project(CopperVM VERSION 0.1
 				DESCRIPTION "A bytecode virtual machine for an opinionated, sensible subset of JavaScript."
 				LANGUAGES CXX)
-
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_BUILD_TYPE Debug)
 
@@ -24,3 +23,10 @@ set_target_properties(libcurt PROPERTIES PREFIX "")
 # cu: Because Copper's symbol is Cu
 add_executable(cu app/Copper.cpp)
 target_link_libraries(cu PUBLIC libcurt)
+
+target_compile_definitions(cu PRIVATE
+	COMPILER_NAME="${CMAKE_CXX_COMPILER_ID}"
+	COMPILER_VERSION="${CMAKE_CXX_COMPILER_VERSION}"
+	PLATFORM="${CMAKE_HOST_SYSTEM_NAME}"
+	COPPER_VERSION="${CopperVM_VERSION}"
+)
