Add support for local variables and block-scope
- Add Environment class
- Add block parsing to Parser
- Add new instructions SETLOCAL and LDLOCAL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ set(LIB_SRC
 	src/Bytecode.cpp
 	src/Compiler.cpp
 	src/Disassembler.cpp
+	src/Environment.cpp
 	src/Object.cpp
 	src/Parser.cpp
 	src/Tokenizer.cpp
